k8s-manifests/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
  labels:
    app: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      serviceAccountName: my-app-service-account
      containers:
      - name: python-app-container
        image: 553963239682.dkr.ecr.us-east-2.amazonaws.com/my-python-app:fb57b7a6fc9434cbc4b4b5315cfa4b07824682ed
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
